<resources>
    <string name="app_name">Trekken</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nome_cognome">Mario Rossi</string>
    <string name="username">rospo</string>
    <string name="title_activity_login">Trekken - Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Mario Rossi</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="friend_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="friend_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_change_color">Change app main colors</string>
    <string-array name="color_list_titles">
        <item>Green</item>
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="color_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Usage &amp; data</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">Power Usage</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Sound &amp; Notifications</string>

    <string name="pref_title_new_message_notifications">App notifications</string>

    <string name="pref_title_ringtone">Alarm Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_default_emergency_number">3289529832</string>
    <string name="pref_title_emergency_number">Emergency Number</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false"> AIzaSyAQUHYAaFgQGH6Gq4RHg2O2fMqDxrEIj4U </string>

    <string name="launch_title">Trekken</string>
    <string name="sign_in">Lets Go</string>
    <string name="auth_providers_header">Login with:</string>
    <string name="email_label">Email</string>
    <string name="google_label">Google</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="ok_label">OK</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="default_theme">Default theme</string>
    <string name="fall_detected">Fall Detected!</string>
</resources>
