<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="setting_title_user"
        android:title="User Data">

        <!-- NOTE: EditTextPreference accepts EditText attributes. -->
        <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
        <EditTextPreference
            android:capitalize="words"
            android:defaultValue="@string/pref_default_display_name"
            android:inputType="textCapWords"
            android:key="display_name"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_display_name" />

        <EditTextPreference
            android:defaultValue="@string/pref_default_emergency_number"
            android:inputType="phone"
            android:key="emergency_number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_title_emergency_number" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="setting_title_personalization"
        android:title="Personalization">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/color_list_titles"
            android:entryValues="@array/color_list_values"
            android:key="color_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/pref_title_change_color" />

    </PreferenceCategory>
</PreferenceScreen>
